// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeclarationIndex buildIndex() should contain a declaration from a *.tsx file 1`] = `
File {
  "declarations": Array [
    VariableDeclaration {
      "end": 124,
      "isConst": true,
      "isExported": true,
      "name": "myComponent",
      "start": 33,
      "type": undefined,
    },
  ],
  "end": 125,
  "exports": Array [],
  "imports": Array [
    NamespaceImport {
      "alias": "React",
      "end": 31,
      "libraryName": "react",
      "start": 0,
    },
  ],
  "resources": Array [],
  "start": 0,
  "usages": Array [
    "myComponent",
    "test",
    "div",
  ],
}
`;

exports[`DeclarationIndex buildIndex() should contain a declaration name with multiple declarations 1`] = `
Array [
  DeclarationInfo {
    "declaration": ClassDeclaration {
      "accessors": Array [],
      "end": 164,
      "isExported": true,
      "methods": Array [],
      "name": "Class1",
      "properties": Array [],
      "start": 141,
    },
    "from": "/classes",
  },
  DeclarationInfo {
    "declaration": ClassDeclaration {
      "accessors": Array [],
      "end": 23,
      "isExported": true,
      "methods": Array [],
      "name": "Class1",
      "properties": Array [],
      "start": 0,
    },
    "from": "/another-classes",
  },
]
`;

exports[`DeclarationIndex buildIndex() should contain certain parsedResources 1`] = `
Array [
  "/classes",
  "/another-classes",
  "/helper-functions",
  "/myReactTemplate",
  "/prototype-funcs",
  "/index",
  "/_index",
]
`;

exports[`DeclarationIndex buildIndex() should contain declarations with names 1`] = `
Array [
  DeclarationInfo {
    "declaration": FunctionDeclaration {
      "end": 92,
      "isAsync": false,
      "isExported": true,
      "name": "isString",
      "parameters": Array [
        ParameterDeclaration {
          "end": 33,
          "name": "str",
          "start": 25,
          "type": "any",
        },
      ],
      "start": 0,
      "type": "str is string",
      "variables": Array [],
    },
    "from": "/helper-functions",
  },
]
`;

exports[`DeclarationIndex buildIndex() should not crash on prototype methods (i.e. toString, hasOwnProperty) 1`] = `
Array [
  DeclarationInfo {
    "declaration": FunctionDeclaration {
      "end": 53,
      "isAsync": false,
      "isExported": true,
      "name": "toString",
      "parameters": Array [],
      "start": 0,
      "type": "string",
      "variables": Array [],
    },
    "from": "/prototype-funcs",
  },
]
`;

exports[`DeclarationIndex buildIndex() should not crash on prototype methods (i.e. toString, hasOwnProperty) 2`] = `
Array [
  DeclarationInfo {
    "declaration": FunctionDeclaration {
      "end": 53,
      "isAsync": false,
      "isExported": true,
      "name": "toString",
      "parameters": Array [],
      "start": 0,
      "type": "string",
      "variables": Array [],
    },
    "from": "/prototype-funcs",
  },
]
`;

exports[`DeclarationIndex buildIndex() should properly index non-barrel files ending in \`index\` 1`] = `
Array [
  DeclarationInfo {
    "declaration": VariableDeclaration {
      "end": 24,
      "isConst": false,
      "isExported": true,
      "name": "barrelExport",
      "start": 0,
      "type": undefined,
    },
    "from": "/",
  },
]
`;

exports[`DeclarationIndex buildIndex() should properly index non-barrel files ending in \`index\` 2`] = `
Array [
  DeclarationInfo {
    "declaration": VariableDeclaration {
      "end": 18,
      "isConst": false,
      "isExported": true,
      "name": "_index",
      "start": 0,
      "type": undefined,
    },
    "from": "/_index",
  },
]
`;

exports[`DeclarationIndex calculateIndexDelta() should calculate a newly added declaration 1`] = `
Object {
  "added": Object {
    "Foobar": Array [
      Object {
        "declaration": ClassDeclaration {
          "accessors": Array [],
          "end": 100,
          "isExported": true,
          "methods": Array [],
          "name": "Foobar",
          "properties": Array [],
          "start": 0,
        },
        "from": "./foobar",
      },
    ],
  },
  "deleted": Array [],
  "updated": Object {},
}
`;

exports[`DeclarationIndex calculateIndexDelta() should calculate a removed declaration 1`] = `
Object {
  "added": Object {},
  "deleted": Array [
    "Foobar",
  ],
  "updated": Object {},
}
`;

exports[`DeclarationIndex calculateIndexDelta() should calculate an updated key (added 1 declaration) 1`] = `
Object {
  "added": Object {},
  "deleted": Array [],
  "updated": Object {
    "Foobar": Array [
      Object {
        "declaration": ClassDeclaration {
          "accessors": Array [],
          "end": 100,
          "isExported": true,
          "methods": Array [],
          "name": "Foobar",
          "properties": Array [],
          "start": 0,
        },
        "from": "./foobar",
      },
      Object {
        "declaration": ClassDeclaration {
          "accessors": Array [],
          "end": 100,
          "isExported": true,
          "methods": Array [],
          "name": "Foobar",
          "properties": Array [],
          "start": 10,
        },
        "from": "./foobar2",
      },
    ],
  },
}
`;

exports[`DeclarationIndex calculateIndexDelta() should calculate an updated key (changed 1 declaration 1`] = `
Object {
  "added": Object {},
  "deleted": Array [],
  "updated": Object {
    "Foobar": Array [
      Object {
        "declaration": ClassDeclaration {
          "accessors": Array [],
          "end": 100,
          "isExported": true,
          "methods": Array [],
          "name": "Foobar",
          "properties": Array [],
          "start": 0,
        },
        "from": "./foobar",
      },
      Object {
        "declaration": ClassDeclaration {
          "accessors": Array [],
          "end": 100,
          "isExported": true,
          "methods": Array [],
          "name": "Foobar",
          "properties": Array [],
          "start": 15,
        },
        "from": "./foobar2",
      },
    ],
  },
}
`;

exports[`DeclarationIndex calculateIndexDelta() should calculate an updated key (removed 1 declaration) 1`] = `
Object {
  "added": Object {},
  "deleted": Array [],
  "updated": Object {
    "Foobar": Array [
      Object {
        "declaration": ClassDeclaration {
          "accessors": Array [],
          "end": 100,
          "isExported": true,
          "methods": Array [],
          "name": "Foobar",
          "properties": Array [],
          "start": 0,
        },
        "from": "./foobar",
      },
    ],
  },
}
`;

exports[`DeclarationIndex calculateIndexDelta() should calculate correctly when nothing happend 1`] = `
Object {
  "added": Object {},
  "deleted": Array [],
  "updated": Object {},
}
`;

exports[`DeclarationIndex exports should export all elements correctly (export * from) 1`] = `
Object {
  "Class1": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 23,
        "isExported": true,
        "methods": Array [],
        "name": "Class1",
        "properties": Array [],
        "start": 0,
      },
      "from": "/exports/export-all",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 47,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 24,
      },
      "from": "/exports/export-all",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 71,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 48,
      },
      "from": "/exports/export-all",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 95,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 72,
      },
      "from": "/exports/export-all",
    },
  ],
  "Class5": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 119,
        "isExported": true,
        "methods": Array [],
        "name": "Class5",
        "properties": Array [],
        "start": 96,
      },
      "from": "/exports/export-all",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 143,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 120,
      },
      "from": "/exports/export-all",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 167,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 144,
      },
      "from": "/exports/export-all",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 191,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 168,
      },
      "from": "/exports/export-all",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 215,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 192,
      },
      "from": "/exports/export-all",
    },
  ],
}
`;

exports[`DeclarationIndex exports should export elements that are already exported correclty 1`] = `
Object {
  "Class1": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 23,
        "isExported": true,
        "methods": Array [],
        "name": "Class1",
        "properties": Array [],
        "start": 0,
      },
      "from": "/exports/export-from-export",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 47,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 24,
      },
      "from": "/exports/classes",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 71,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 48,
      },
      "from": "/exports/classes",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 95,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 72,
      },
      "from": "/exports/classes",
    },
  ],
  "Class5": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 119,
        "isExported": true,
        "methods": Array [],
        "name": "Class5",
        "properties": Array [],
        "start": 96,
      },
      "from": "/exports/export-from-export",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 143,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 120,
      },
      "from": "/exports/classes",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 167,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 144,
      },
      "from": "/exports/classes",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 191,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 168,
      },
      "from": "/exports/classes",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 215,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 192,
      },
      "from": "/exports/classes",
    },
  ],
}
`;

exports[`DeclarationIndex exports should export some elements as alias correctly (export {x as y} from) 1`] = `
Object {
  "Bar": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 119,
        "isExported": true,
        "methods": Array [],
        "name": "Bar",
        "properties": Array [],
        "start": 96,
      },
      "from": "/exports/export-alias",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 47,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 24,
      },
      "from": "/exports/classes",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 71,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 48,
      },
      "from": "/exports/classes",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 95,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 72,
      },
      "from": "/exports/classes",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 143,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 120,
      },
      "from": "/exports/classes",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 167,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 144,
      },
      "from": "/exports/classes",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 191,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 168,
      },
      "from": "/exports/classes",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 215,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 192,
      },
      "from": "/exports/classes",
    },
  ],
  "Foo": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 23,
        "isExported": true,
        "methods": Array [],
        "name": "Foo",
        "properties": Array [],
        "start": 0,
      },
      "from": "/exports/export-alias",
    },
  ],
}
`;

exports[`DeclarationIndex exports should export some elements correctly (export {} from) 1`] = `
Object {
  "Class1": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 23,
        "isExported": true,
        "methods": Array [],
        "name": "Class1",
        "properties": Array [],
        "start": 0,
      },
      "from": "/exports/export-some",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 47,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 24,
      },
      "from": "/exports/classes",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 71,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 48,
      },
      "from": "/exports/classes",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 95,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 72,
      },
      "from": "/exports/classes",
    },
  ],
  "Class5": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 119,
        "isExported": true,
        "methods": Array [],
        "name": "Class5",
        "properties": Array [],
        "start": 96,
      },
      "from": "/exports/export-some",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 143,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 120,
      },
      "from": "/exports/classes",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 167,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 144,
      },
      "from": "/exports/classes",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 191,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 168,
      },
      "from": "/exports/classes",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 215,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 192,
      },
      "from": "/exports/classes",
    },
  ],
}
`;

exports[`DeclarationIndex exports should parse one single file correctly 1`] = `
Object {
  "Class1": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 23,
        "isExported": true,
        "methods": Array [],
        "name": "Class1",
        "properties": Array [],
        "start": 0,
      },
      "from": "/exports/classes",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 47,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 24,
      },
      "from": "/exports/classes",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 71,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 48,
      },
      "from": "/exports/classes",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 95,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 72,
      },
      "from": "/exports/classes",
    },
  ],
  "Class5": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 119,
        "isExported": true,
        "methods": Array [],
        "name": "Class5",
        "properties": Array [],
        "start": 96,
      },
      "from": "/exports/classes",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 143,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 120,
      },
      "from": "/exports/classes",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 167,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 144,
      },
      "from": "/exports/classes",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 191,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 168,
      },
      "from": "/exports/classes",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 215,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 192,
      },
      "from": "/exports/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly add a file that is exported 1`] = `
Object {
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly add a file that is exported 2`] = `
Object {
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "Foobar": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 21,
        "isExported": true,
        "methods": Array [],
        "name": "Foobar",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly add a new created file 1`] = `
Object {
  "Class1": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 164,
        "isExported": true,
        "methods": Array [],
        "name": "Class1",
        "properties": Array [],
        "start": 141,
      },
      "from": "/classes",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 188,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 165,
      },
      "from": "/classes",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 212,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 189,
      },
      "from": "/classes",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 236,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 213,
      },
      "from": "/classes",
    },
  ],
  "Class5": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 260,
        "isExported": true,
        "methods": Array [],
        "name": "Class5",
        "properties": Array [],
        "start": 237,
      },
      "from": "/classes",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 284,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 261,
      },
      "from": "/classes",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 308,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 285,
      },
      "from": "/classes",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 332,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 309,
      },
      "from": "/classes",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 356,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 333,
      },
      "from": "/classes",
    },
  ],
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 139,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 137,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 100,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 61,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 59,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 57,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 27,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly add a new created file 2`] = `
Object {
  "Class1": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 164,
        "isExported": true,
        "methods": Array [],
        "name": "Class1",
        "properties": Array [],
        "start": 141,
      },
      "from": "/classes",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 188,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 165,
      },
      "from": "/classes",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 212,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 189,
      },
      "from": "/classes",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 236,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 213,
      },
      "from": "/classes",
    },
  ],
  "Class5": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 260,
        "isExported": true,
        "methods": Array [],
        "name": "Class5",
        "properties": Array [],
        "start": 237,
      },
      "from": "/classes",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 284,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 261,
      },
      "from": "/classes",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 308,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 285,
      },
      "from": "/classes",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 332,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 309,
      },
      "from": "/classes",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 356,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 333,
      },
      "from": "/classes",
    },
  ],
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 139,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 137,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 100,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 61,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 59,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 57,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 27,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
  "isNumber": Array [
    DeclarationInfo {
      "declaration": FunctionDeclaration {
        "end": 186,
        "isAsync": false,
        "isExported": true,
        "name": "isNumber",
        "parameters": Array [
          ParameterDeclaration {
            "end": 127,
            "name": "str",
            "start": 119,
            "type": "any",
          },
        ],
        "start": 94,
        "type": "str is number",
        "variables": Array [],
      },
      "from": "/helper-functions",
    },
  ],
  "isString": Array [
    DeclarationInfo {
      "declaration": FunctionDeclaration {
        "end": 92,
        "isAsync": false,
        "isExported": true,
        "name": "isString",
        "parameters": Array [
          ParameterDeclaration {
            "end": 33,
            "name": "str",
            "start": 25,
            "type": "any",
          },
        ],
        "start": 0,
        "type": "str is string",
        "variables": Array [],
      },
      "from": "/helper-functions",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly add an empty file 1`] = `
Object {
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly add an empty file 2`] = `
Object {
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly remove a deleted file 1`] = `
Object {
  "Class1": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 164,
        "isExported": true,
        "methods": Array [],
        "name": "Class1",
        "properties": Array [],
        "start": 141,
      },
      "from": "/classes",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 188,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 165,
      },
      "from": "/classes",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 212,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 189,
      },
      "from": "/classes",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 236,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 213,
      },
      "from": "/classes",
    },
  ],
  "Class5": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 260,
        "isExported": true,
        "methods": Array [],
        "name": "Class5",
        "properties": Array [],
        "start": 237,
      },
      "from": "/classes",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 284,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 261,
      },
      "from": "/classes",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 308,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 285,
      },
      "from": "/classes",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 332,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 309,
      },
      "from": "/classes",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 356,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 333,
      },
      "from": "/classes",
    },
  ],
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 139,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 137,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 100,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 61,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 59,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 57,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 27,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly remove a deleted file 2`] = `Object {}`;

exports[`DeclarationIndex reindexForChanges() should correctly remove an exported file 1`] = `
Object {
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "Foobar": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 21,
        "isExported": true,
        "methods": Array [],
        "name": "Foobar",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly remove an exported file 2`] = `
Object {
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly update a file that is exported 1`] = `
Object {
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "Foobar": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 21,
        "isExported": true,
        "methods": Array [],
        "name": "Foobar",
        "properties": Array [],
        "start": 0,
      },
      "from": "/foobar",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly update a file that is exported 2`] = `
Object {
  "Barbaz": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 43,
        "isExported": true,
        "methods": Array [],
        "name": "Barbaz",
        "properties": Array [],
        "start": 22,
      },
      "from": "/classes",
    },
  ],
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "Foobar": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 21,
        "isExported": true,
        "methods": Array [],
        "name": "Foobar",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly update a modified file 1`] = `
Object {
  "Class1": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 164,
        "isExported": true,
        "methods": Array [],
        "name": "Class1",
        "properties": Array [],
        "start": 141,
      },
      "from": "/classes",
    },
  ],
  "Class2": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 188,
        "isExported": true,
        "methods": Array [],
        "name": "Class2",
        "properties": Array [],
        "start": 165,
      },
      "from": "/classes",
    },
  ],
  "Class3": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 212,
        "isExported": true,
        "methods": Array [],
        "name": "Class3",
        "properties": Array [],
        "start": 189,
      },
      "from": "/classes",
    },
  ],
  "Class4": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 236,
        "isExported": true,
        "methods": Array [],
        "name": "Class4",
        "properties": Array [],
        "start": 213,
      },
      "from": "/classes",
    },
  ],
  "Class5": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 260,
        "isExported": true,
        "methods": Array [],
        "name": "Class5",
        "properties": Array [],
        "start": 237,
      },
      "from": "/classes",
    },
  ],
  "Class6": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 284,
        "isExported": true,
        "methods": Array [],
        "name": "Class6",
        "properties": Array [],
        "start": 261,
      },
      "from": "/classes",
    },
  ],
  "Class7": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 308,
        "isExported": true,
        "methods": Array [],
        "name": "Class7",
        "properties": Array [],
        "start": 285,
      },
      "from": "/classes",
    },
  ],
  "Class8": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 332,
        "isExported": true,
        "methods": Array [],
        "name": "Class8",
        "properties": Array [],
        "start": 309,
      },
      "from": "/classes",
    },
  ],
  "Class9": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 356,
        "isExported": true,
        "methods": Array [],
        "name": "Class9",
        "properties": Array [],
        "start": 333,
      },
      "from": "/classes",
    },
  ],
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 139,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 137,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 100,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 61,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 59,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 57,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 27,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;

exports[`DeclarationIndex reindexForChanges() should correctly update a modified file 2`] = `
Object {
  "FancierLibraryClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 379,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 329,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomethingAwesome",
            "parameters": Array [],
            "start": 292,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "FancierLibraryClass",
        "properties": Array [],
        "start": 205,
      },
      "from": "/classes",
    },
  ],
  "MyClass": Array [
    DeclarationInfo {
      "declaration": ClassDeclaration {
        "accessors": Array [],
        "end": 155,
        "isExported": true,
        "methods": Array [
          MethodDeclaration {
            "end": 105,
            "isAbstract": false,
            "isAsync": false,
            "isOptional": false,
            "isStatic": false,
            "name": "doSomething",
            "parameters": Array [],
            "start": 75,
            "type": "void",
            "variables": Array [],
            "visibility": 2,
          },
        ],
        "name": "MyClass",
        "properties": Array [],
        "start": 0,
      },
      "from": "/classes",
    },
  ],
}
`;
